[gd_scene load_steps=3 format=3 uid="uid://dg55yu6bit6jt"]

[ext_resource type="Script" path="res://scripts/phone_screen.gd" id="1_4cg5r"]
[ext_resource type="Script" path="res://scripts/volume_slider.gd" id="4_5jmmy"]

[node name="PhoneScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = -360.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_4cg5r")

[node name="WhiteBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Battery" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -878.0
grow_horizontal = 2
grow_vertical = 2

[node name="BatteryMargin" type="MarginContainer" parent="Battery"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 18.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = 175.0
grow_horizontal = 2

[node name="BateryVBox" type="VBoxContainer" parent="Battery/BatteryMargin"]
layout_mode = 2

[node name="BatteryBar" type="ProgressBar" parent="Battery/BatteryMargin/BateryVBox"]
z_index = 4
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
max_value = 30.0

[node name="Home" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Home"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Home/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 24

[node name="Options" type="Button" parent="Home/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "options"

[node name="Button2" type="Button" parent="Home/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "app 2"

[node name="Button3" type="Button" parent="Home/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "app 3
"

[node name="Button4" type="Button" parent="Home/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "app 4
"

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -71.0
offset_right = 139.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Options/MarginContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="Options/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "back"

[node name="Quit" type="Button" parent="Options/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "quit"

[node name="Fullscreen" type="CheckButton" parent="Options/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "fullscreen"
alignment = 2

[node name="Vsync" type="CheckButton" parent="Options/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "vsync"
alignment = 2

[node name="VSeparator" type="VSeparator" parent="Options/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Options/MarginContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="VolumeLabel" type="Label" parent="Options/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "volume"
vertical_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="Options/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
script = ExtResource("4_5jmmy")
bus_name = "Master"

[node name="VSeparator2" type="VSeparator" parent="Options/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="BlackScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Home/MarginContainer/HBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Options/MarginContainer/VBoxContainer2/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Options/MarginContainer/VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="Options/MarginContainer/VBoxContainer2/Fullscreen" to="." method="_on_fullscreen_toggled"]
